# PhonePilot

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  docker-compose.dev.yml  docker-compose.ollama.yml  docker-compose.yml
.github/workflows/: ci.yml  release.yml
backend/: Dockerfile  pyproject.toml  requirements-dev.txt  requirements.txt
backend/alembic/: env.py
backend/app/: cli.py  config.py  main.py
backend/app/api/: deps.py
backend/app/api/routes/: devices.py  models.py  scenarios.py  stream.py  tasks.py  voice.py
backend/app/core/: agent.py  executor.py  planner.py
backend/app/device/: actions.py  adb.py  manager.py  scrcpy.py
backend/app/memory/: models.py  search.py  store.py
backend/app/scenarios/: conditions.py  player.py  recorder.py  scheduler.py
backend/app/vlm/: base.py  ollama.py  parser.py  prompts.py
backend/app/voice/: handler.py  stt.py  tts.py  wake_word.py
backend/app/workers/: tasks.py
backend/tests/: test_agent.py  test_api.py  test_device.py
docker/ollama/: Dockerfile
docs/: API.md  MODELS.md  SCENARIOS.md  SETUP.md
frontend/: Dockerfile  index.html  nginx.conf  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx
frontend/src/api/: client.ts
frontend/src/components/: ActionLog.tsx  DeviceList.tsx  DeviceScreen.tsx  ScenarioEditor.tsx  TaskInput.tsx  VoiceControl.tsx
frontend/src/hooks/: useDevice.ts  useWebSocket.ts
frontend/src/stores/: appStore.ts
scripts/: dev.sh  download_models.sh  setup.sh
